--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,18 +1,18 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import PageTitle from "../components/page/PageTitle";
-import PageContainer from "../components/page/PageContainer";
-import Card, { CardHeader } from "../components/card/Card";
-import SnsLinks from "../components/footer/SnsLinks";
-import CoffeeFlavorTag from "../components/coffee/CoffeeFlavorTag";
+import PageTitle from "../components/shared/page/PageTitle";
+import PageContainer from "../components/shared/page/PageContainer";
+import Card, { CardHeader } from "../components/shared/card/Card";
+import SnsLinks from "../components/shared/sns-links/SnsLinks";
+import CoffeeFlavorTag from "../components/features/coffee/CoffeeFlavorTag";
 import { aboutData } from "../data/about";
 import { organizations } from "../data/organizations";
 import { qualifications } from "../data/qualifications";
-import "../components/page/page-title.css";
-import "../components/page/page-container.css";
-import "../components/card/card.css";
-import "../components/footer/sns-links.css";
-import "../components/coffee/coffee-flavor-tag.css";
+import "../components/shared/page/page-title.css";
+import "../components/shared/page/page-container.css";
+import "../components/shared/card/card.css";
+import "../components/shared/sns-links/sns-links.css";
+import "../components/features/coffee/coffee-flavor-tag.css";
 ---
 
 <Layout title="About">
